# NA-and-NumPDEs

./: LICENSE  readme.md
Approximation/: CMakeLists.txt  Doxyfile
Approximation/include/: Config.h  DLS.h  myLapack.h
Approximation/src/: problem_A.cpp  problem_B.cpp
Approximation/src/header/: DLS.cpp
ComputerArithmetic/: CMakeLists.txt  Doxyfile
ComputerArithmetic/include/: Config.h  FPN.h
ComputerArithmetic/octave/: problem_A.m  problem_B.m
ComputerArithmetic/src/: problem_A.cpp  problem_B.cpp
ComputerArithmetic/src/header/: FPN.cpp
FiniteDifference/: CMakeLists.txt  Doxyfile  readme.md
FiniteDifference/include/: FD.cpp  FD.h  Vec2d.h  conditions.cpp  conditions.h  genJson.cpp  genJson.h  global.cpp  global.h
FiniteDifference/src/: myJson1.cpp  myJson2.cpp  myJson3.cpp  myJson4.cpp  myJson5.cpp  myJson6.cpp  myJson7.cpp  myJson8.cpp  myJson9.cpp  test.cpp
IVPs/: CMakeLists.txt
IVPs/input/: crAB1T2.json  crAB2T2.json  crAB3T2.json  crAB4T2.json  crAM2T2.json  crAM3T2.json  crAM4T2.json  crAM5T2.json  crBDF1T2.json  crBDF2T2.json  crBDF3T2.json  crBDF4T2.json  crCRKT2.json  crDPT2.json  crESDIRKT2.json  crFT2.json  crGL1T2.json  crGL2T2.json  crGL3T2.json  main.json  main2.json
Multigrid/: CMakeLists.txt
Multigrid/include/: Generator.cpp  Multigrid.cpp  Multigrid.h  Vec2d.h  conditions.cpp  conditions.h  genJson.cpp  genJson.h  global.cpp  global.h  operator.cpp  operator.h  test_helper.cpp  test_helper.h
Multigrid/plot/: plot.py
PolynomialInterpolation/: CMakeLists.txt
PolynomialInterpolation/include/: PolyInterp.h
PolynomialInterpolation/src/plot/: problem_B.m  problem_C.m  problem_D.m  problem_E.m
PolynomialInterpolation/test/: CMakeLists.txt  Interp_test.cpp  Poly_test.cpp  main.cpp  test.h
Spline/: CMakeLists.txt
Spline/include/: Config.h  InterpConditions.h  Polynomial.h  Spline.h  Vec.h  myLapack.h  output.h
Spline/octave/: problem_G.m
nonlinearEqSolver/: EquationSolver.cpp  EquationSolver.h  Makefile  Problem_C.cpp  Problem_D.cpp  Problem_E.cpp  Problem_F.cpp  main.cpp  problem_B.cpp
results/: Readme.md
results/Chap12/: Beam_Warming.m  Ex1234.m  Homework6.aux  Homework6.tex  Initial_Condition.m  Lax_Friedrichs.m  Lax_Wendroff.m  Lax_Wendroff1.m  leapfrog.m  leapfrog1.m  upwind.m  第十二章作业.tex
results/chap10/: Chap10_2.aux  Chap10_2.tex  Ex179.m
results/chap11/: BTCS_1.m  BTCS_2h.m  CN_1.m  CN_2.m  FTCS_1.m  FTCS_2.m  GS_1.m  GS_2h.m  collocation_1.m  collocation_2h.m  exact_solution.m  未命名.aux  第十一章作业.tex
results/chap5/: cheat.cpp
results/chap8/: hw4chap8.tex
